# JUCE_Audio_Player

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  Unnamed.filtergraph  buildAndLaunch.sh  diary.md  terminal_output.txt  test.filtergraph
cmake/: CPM.cmake
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/src/: AudioProcessorTest.cpp
